# med-scheduling

./: Dockerfile  README.md  alembic.ini  main.py  med-scheduling.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1231410aa9e3_create_initial_tables.py
src/config/: scalar.py
src/infra/: create_tables.py  database.py
src/models/: base_model.py  doctor_medical_specialties_model.py  doctors_model.py  medical_specialties_model.py
src/routers/: doctor_medical_specialties_routers.py  doctors_routers.py  medical_specialties_routers.py
src/schemas/: doctor_mecidal_specialties_schemas.py  doctor_schemas.py  medical_specialties_schemas.py  response_schema.py
src/services/: doctor_medical_specialties_service.py  doctor_services.py  medical_specialties_services.py
