[project]
name = "med-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.7",
    "pydantic>=2.10.6",
    "python-decouple>=3.8",
    "scalar-fastapi>=1.0.3",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
